# ray-tracing

./: .clang-format  .gitattributes  .gitignore  .ycm_extra_conf.py  BRDF.cpp  BRDF.h  Buffer.cpp  CMakeLists.txt  Camera.h  Color.cpp  CreateScenes.h  CubeMap.h  DirectionalLight.cpp  Image.cpp  Image.h  Lambert.h  Mesh.h  Noise.h  Phong.h  Plane.cpp  Point.h  PunctualLight.h  README.md  Ray.cpp  RayTracing.1  Renderer.cpp  Scene.h  Shader.h  Triangle.h  bob.obj.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  StandardProjectSettings.cmake
resources/hooks/: pre-commit
src/: BRDF.cpp  BRDF.hpp  BoundingBox.cpp  BoundingBox.h  BoundingBox.hpp  Buffer.cpp  Buffer.h  Buffer.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.h  Color.hpp  CreateScenes.cpp  CreateScenes.hpp  CubeMap.cpp  CubeMap.hpp  DirectionalLight.cpp  DirectionalLight.h  DirectionalLight.hpp  Image.cpp  Image.hpp  Lambert.cpp  Lambert.hpp  Light.cpp  Light.h  Light.hpp  Mesh.cpp  Mesh.hpp  Noise.cpp  Noise.hpp  OBJParameters.cpp  OBJParameters.hpp  Phong.cpp  Phong.hpp  Plane.cpp  Plane.h  Plane.hpp  Point.cpp  Point.hpp  (+23 more)
